--- a/css/index.css
+++ b/css/index.css
@@ -122,6 +122,8 @@
 html {
   font-size: 16px;
   -webkit-text-size-adjust: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 body {
@@ -135,14 +137,14 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100dvh;
+  width: 100%;
+  height: 100%;
   touch-action: pan-y;
 }
 
 #app {
-  width: 100vw;
-  height: 100dvh;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   position: relative;
